[tool.poetry]
name = "great-empires"
version = "0.1.0"
description = ""
authors = ["vinostroud <krstrouse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
plotly = "^5.18.0"
geopandas = "^0.14.1"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
